[metadata]
name = python_bebop_liquidiert
version = 1.0.0
author = Korbinian Habereder
author_email = korbinian.habereder@gmail.com
description = bebop runtime bindings for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/betwixt-labs/bebop
project_urls =
    Bug Tracker = https://github.com/betwixt-labs/bebop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src