[package]
name = "bebop"
version = "0.1.0"
edition = "2018"
description = "The Rust runtime for Bebop, a schema-based binary serialization format."
readme = "../../README.md"
license = "Apache-2.0"
keywords = ["binary", "encode", "decode", "serialization", "schema"]
categories = ["encoding"]
repository = "https://github.com/betwixt-labs/bebop"
homepage = "https://docs.bebop.sh"

[[bench]]
name = "main"
harness = false

[dependencies]
bitflags = "1.3.2"
itertools = { version = "0.13.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
# where reasonable, skip decoding checks, this will cause random issues if invalid UTF8 is sent to
# the program
unchecked = []
# Enable to have maps sorted by their key values
sorted_maps = ["itertools"]
