# Note: for packaging, make sure bebopc directory is moved into the local directory first!

[package]
name = "bebop-tools"
version = "0.1.0"
edition = "2021"
description = "Cargo buildscript tools for Bebop, a schema-based binary serialization format."
readme = "../../README.md"
license = "Apache-2.0"
keywords = ["binary", "encode", "decode", "serialization", "schema"]
categories = ["encoding"]
repository = "https://github.com/betwixt-labs/bebop"
homepage = "https://docs.bebop.sh"

[lib]

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking"], optional = true }
zip = { version = "2.2.0", optional = true }
json = { version = "0.12.4", optional = true }
which = { version = "6.0.3", optional = true }

[features]
default = ["downloader", "format"]
downloader = ["reqwest", "zip", "json"]
format = ["which"]
