[package]
name = "auto-testing"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bebop = { path = "../../../Runtime/Rust" }

[build-dependencies]
bebop-tools = { path = "../../../Tools/cargo", default-features = false, features = ["format"] }

[features]
default = ["bebop-owned-all", "hello-handlers", "hello-requests"]
bebop-owned-all = []
hello-handlers = []
hello-requests = []
