[package]
name = "benchmarking"
version = "0.1.0"
edition = "2018"

[[bench]]
name = "main"
harness = false

[[example]]
name = "flamegraph"
required-features = ["pprof"]

[profile.bench]
lto = true
codegen-units = 1

# Use exact versions for all things being tested
[dependencies]
bebop = { path = "../../../Runtime/Rust" }
protobuf = "2.24.1"
serde = { version = "1.0.127", features = ["derive"] }
pprof = { version = "0.5", features = ["criterion", "flamegraph"], optional = true}
criterion = "0.3"
serde_json = "1.0.66"
rmp-serde = "0.15.5"
bincode = "1.3.3"

[build-dependencies]
bebop-tools = { path = "../../../Tools/cargo", default-features = false }
protobuf-codegen-pure = "2.24.1"
