[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "main"
harness = false

[[example]]
name = "flamegraph"
required-features = ["pprof"]

[profile.bench]
lto = true
codegen-units = 1

# Use exact versions for all things being tested
[dependencies]
bebop = { path = "../../../Runtime/Rust" }
protobuf = "2.28.0"
serde = { version = "1.0.127", features = ["derive"] }
pprof = { version = "0.11", features = ["criterion", "flamegraph"], optional = true}
criterion = { version = "0.4", features = ["html_reports"] }
serde_json = "1.0.66"
rmp-serde = "1.1.1"
bincode = "1.3.3"

[build-dependencies]
bebop-tools = { path = "../../../Tools/cargo", default-features = false }
protobuf-codegen-pure = "2.24.1"
