[package]
name = "functionality-testing"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bebop = { path = "../../../Runtime/Rust" }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.17", default-features = false, optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
static_assertions = "1.1"

[build-dependencies]
bebop-tools = { path = "../../../Tools/cargo", default-features = false, features = ["format"] }

[features]
default = ["bebop-owned-all", "rpc"]
rpc = ["kvstore-requests", "kvstore-handlers", "null-service-handlers", "null-service-requests", "bebop-owned-all", "bebop/rpc", "async-trait", "tokio/rt", "tokio/rt-multi-thread", "tokio/sync", "tokio/macros", "parking_lot"]
null-service-handlers = []
null-service-requests = []
kvstore-requests = []
kvstore-handlers = []
bebop-owned-all = []
